# Cambium_AI

./: .gitignore  .pre-commit-config.yaml  AI_GOVERNANCE.md  AI_USE_STATEMENT.md  ATTRIBUTION.md  AUTORUN.md  CAMBIUM_V2.md  CAMBIUM_V3.md  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  COMPARISON.md  CONTRIBUTING.md  DECISIONS.md  DEVELOPMENT_PLAYBOOK.md  EFFICIENCY.md  EVALUATION_01_SECURITY.md  EVALUATION_02_PERFORMANCE_COST.md  EVALUATION_03_UX_INTERFACE.md  EVALUATION_04_INTEGRATION.md  EVALUATION_05_TESTING_QA.md  EVALUATION_06_RESEARCH_QUALITY.md  FACULTY_ROSTER.md  FAQ.md  GETTING_STARTED.md  GOVERNANCE.md  HANDOFF.md  INSTALL.md  INSTITUTE.md  LICENSE  LIFECYCLE_V3.md  MCP_INTEGRATION.md  OUTPUT_CONTRACT.md  PRESENTATION.md  PUBLISHING.md  README.md  RESEARCH_CONDUCT.md  REVIEW_RESPONSE.md  REVIEW_RESPONSE2.md  ROADMAP.md  (+17 more)
.claude-plugin/: marketplace.json  plugin.json
.claude/agents/: 00-orchestrator.md  01-scout-prior-art.md  02-scout-methods.md  03-scout-landscape.md  04-lab-theory.md  05-lab-methods.md  06-lab-domain.md  07-verify-rigor.md  08-verify-methodology.md  09-verify-evidence.md  10-verify-domain.md  11-exec-experiments.md  12-exec-ablation.md  13-document-office.md  14-record-keeper.md  15-librarian.md  16-janitor.md  17-teaching-assistant.md  18-research-assistant.md  19-office-manager.md  20-data-steward.md  21-integrity-officer.md  22-figures.md  23-outreach.md  24-rfp-analyst.md  25-principal-investigator.md  26-ideation-facilitator.md  27-proposal-writer.md  28-faculty-expert.md  29-reporting-officer.md  30-deck-builder.md  31-collaborator-scout.md  32-partnership-liaison.md  33-program-manager.md  34-lab-statistics.md  35-exec-iteration.md  36-research-engineer.md  37-referee.md  38-idea-tournament.md  39-rfp-radar.md  (+6 more)
.githooks/: pre-push
.github/: PULL_REQUEST_TEMPLATE.md  quality.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: 00-orchestrator.md  assets.yml  pages.yml  publish.yml  quality.yml  validate.yml
academy/: courses.json  index.html
academy/labs/: ai-fullstack-explainer.md  ai-fullstack-lab.html
agent_outputs/: .gitkeep  run_board.html  scout_landscape.md
agents/: 01-scout-prior-art.md  13-document-office.md  17-teaching-assistant.md  27-proposal-writer.md
assets/: BRAND.md  Cambium Academy (standalone).html  GIF_SCRIPT.md  adopted_ideas.json  benchmark_dashboard.html
commands/: cambium.md  solo.md
courses/: AI ASSI.txt  README.md  index.html
courses/course-01-intro-to-ai/: PUBLISHING.md  README.md  YOUTUBE_UPLOAD.md  index.html
demo/: learning_lab.html  tour.html
docs/: ai4ra_alignment.md  engineering_conventions.md  index.md  requirements-docs.txt  web_ui_toolbelt.md
docs/concepts/: PRESENTATION.md  RUN_MODES.md
docs/governance/: POSITIONING.md
docs/paper/: PREPRINT_OUTLINE.md
docs/reference/: BRAIN_ROADMAP.md  CODE_QUALITY.md  DECISIONS.md  ROADMAP.md
docs/start-here/: FIRST_RUN.md  GETTING_STARTED.md  INSTALL.md  USE_CAMBIUM.md
evals/enforcement_study/: RECRUITING.md  RESULTS_FABLE5.md
examples/ai4ra/: README.md  sample_award_notice.txt
examples/configs/: agricultural-field-trials.yml  social-science-survey.yml
examples/demo-from-scratch/: 01_rfp_brief.md  02_idea_slate.md  README.md  RFP.md
examples/demo-humanities/: 01_rfp_brief.md  02_idea_slate.md  RFP.md
examples/demo-mid-project/: README.md
examples/demo-public-health/: 01_rfp_brief.md  02_idea_slate.md  RFP.md
examples/e2e-worked-example/: 00_rfp_brief.md  01_aims.md  02_proposal_excerpt.md  03_report.md  04_postaward_runlab.md  README.md  findings_ledger.csv  provenance_manifest.json
examples/full-lifecycle/: 01_rfp_brief.md  02_idea_slate.md  03_aims.md  04_proposal_draft.md  README.md  RFP.md  deliverables.md
governance/: CONTRIBUTION_LEDGER.csv  GATES.md  cite_audit.json  mcp_map.yml  url_audit.json  validate.py
governance/contribution_diffs/: G-test-copy-3-2026-06-28T003958.diff  (+1 more)
governance/funders/: doe.yml  (+1 more)
mcp_server/: README.md  pyproject.toml
mcp_server/cambium_mcp/: server.py
plugin/: README.md  marketplace.json
projects/: REGISTRY.md
references/: refs.bib
scripts/: precheck.py
start/: DOMAIN_SETUP.md  index.html
templates/: ACCESSIBILITY_CHECKLIST.md  ADR.md  CLAIM_LINEAGE.md  COLLAB_WORKSPACE.md  GATE_SUMMARY.md  IDEA_INBOX.md  INTERPRETATION_FALLACY_CHECKLIST.md  LEARNING_PACKET.md  POST_AWARD_PLAN.md  USER_PROFILE.md  findings_ledger.csv  leaderboard.md  learning_lab_template.html  master_plan.md
tests/: conftest.py  test_academy_build.py  test_accessibility.py  test_agent_scaffold.py  test_assistive_logic.py  test_award_calendar.py  test_board_e2e.py  test_board_pro.py  test_brain_upgrades.py  test_bridge.py  test_cambium_run_router.py  test_cite_check.py  test_cite_export.py  test_closeout.py  test_cost_telemetry.py  test_deadline_radar.py  test_dispatch_plan.py  test_enforce_all.py  test_flashcards.py  test_flashcards_export.py  test_framework.py  test_gate_and_audit.py  test_gen_dashboard.py  test_gen_gate_card.py  test_gen_readme.py  test_gen_tool_index.py  test_glossary_builder.py  test_glossary_gen.py  test_inline_board.py  test_intake_guard.py  test_learning_delivery.py  test_learning_lab.py  test_mcp.py  test_mcp_discovery.py  test_memory_recall.py  test_new_agent.py  test_new_skill.py  test_paper_search.py  test_pii_screen.py  test_plugin_lint.py  (+21 more)
tools/: TOOL_INDEX.md  _patch_lessons.py  agent_scaffold.py  audit_log.py  award_calendar.py  budget_narrative_match.py  budget_review.py  cambium_io.py  cambium_run.py  cambium_start.py  check_agents.py  checklist_builder.py  ci_ledger.csv  cite_check.py  cite_export.py  closeout.py  consistency_check.py  course_pack.py  data_scan.py  deadline_radar.py  deterministic_checks.py  dispatch_plan.py  doctor.py  draft_diff.py  effort_cert.py  effort_reconciler.py  enforce.py  finding_audit.py  flashcards.py  flashcards_export.py  gate.py  gate_lock.py  gen_board_image.py  gen_board_pro.py  gen_brand_assets.py  gen_capabilities.py  gen_dashboard.py  gen_demo_gif.py  gen_gate_card.py  gen_inline_board.py  (+45 more)
(+125 files in other folders)
