[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cambium-institute"
version = "1.20.0"
description = "Cambium gives one researcher a team of 46 AI specialists across 11 councils to scout, draft, and check, with 8 human gates so the researcher, not the model, makes every call that matters."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "M. Jaslam", email = "pkjaslamagrico@gmail.com"}
]
keywords = ["ai", "research", "multi-agent", "governance", "reproducibility", "grant-writing", "academic"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Education",
]

dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "pydantic>=2.0",
    "websockets>=12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "httpx>=0.27",
]

[project.urls]
Homepage = "https://github.com/pkjaslam/Cambium_AI"
Documentation = "https://github.com/pkjaslam/Cambium_AI#readme"
Repository = "https://github.com/pkjaslam/Cambium_AI"
Issues = "https://github.com/pkjaslam/Cambium_AI/issues"
Changelog = "https://github.com/pkjaslam/Cambium_AI/blob/main/CHANGELOG.md"

[project.scripts]
cambium = "tools.cambium_run:main"

[tool.setuptools]
packages = []
py-modules = []

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.setuptools.package-data]
"*" = ["*.md", "*.yml", "*.yaml", "*.json", "*.html", "*.css", "*.js", "*.svg", "*.png"]
